repaired popup on mobile

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -198,6 +198,14 @@ form
   display: none
 
 .popup
+  @media screen and (min-width: 1201px)
+    font-size: 1em
+  @media screen and (max-width: 1200px)
+    font-size: 1.2em
+  @media screen and (max-width: 960px)
+    font-size: 1.5em
+  @media screen and (max-width: 720px)
+    font-size: 1.6em
   z-index: 100
   position: absolute
   display: none
